--- a/01-gallery.html
+++ b/01-gallery.html
@@ -14,10 +14,19 @@
     <!-- До цього списку додаються елементи галереї -->
     <ul class="gallery"></ul>
 
-     <!--
-     Модальне вікно для повнорозмірного зображення
-     Щоб відкрити, необхідно додати на div.lightbox CSS-клас is-open
-    -->
+    const refs = {
+  galleryListEl: document.querySelector('ul.gallery'),
+  modalContainerEl: document.querySelector('div.lightbox'),
+  lightboxOverlayEl: document.querySelector('div.lightbox__overlay'),
+  modalImgEl: document.querySelector('img.lightbox__image'),
+  modalCloseBtnEl: document.querySelector('[data-action="close-lightbox"]'),
+};
+
+const galleryMarkup = createGalleryMarkup(galleryItems);
+refs.galleryListEl.insertAdjacentHTML('beforeend', galleryMarkup);
+refs.galleryListEl.addEventListener('click', onGalleryItemClick);
+refs.modalCloseBtnEl.addEventListener('click', closeModal);
+refs.lightboxOverlayEl.addEventListener('click', closeModal); // 7.
 
     <div class="lightbox js-lightbox">
       <div class="lightbox__overlay"></div>
