--- a/01-gallery.html
+++ b/01-gallery.html
@@ -14,19 +14,10 @@
     <!-- До цього списку додаються елементи галереї -->
     <ul class="gallery"></ul>
 
-    const refs = {
-  galleryListEl: document.querySelector('ul.gallery'),
-  modalContainerEl: document.querySelector('div.lightbox'),
-  lightboxOverlayEl: document.querySelector('div.lightbox__overlay'),
-  modalImgEl: document.querySelector('img.lightbox__image'),
-  modalCloseBtnEl: document.querySelector('[data-action="close-lightbox"]'),
-};
-
-const galleryMarkup = createGalleryMarkup(galleryItems);
-refs.galleryListEl.insertAdjacentHTML('beforeend', galleryMarkup);
-refs.galleryListEl.addEventListener('click', onGalleryItemClick);
-refs.modalCloseBtnEl.addEventListener('click', closeModal);
-refs.lightboxOverlayEl.addEventListener('click', closeModal); // 7.
+     <!--
+     Модальне вікно для повнорозмірного зображення
+     Щоб відкрити, необхідно додати на div.lightbox CSS-клас is-open
+    -->
 
     <div class="lightbox js-lightbox">
       <div class="lightbox__overlay"></div>
@@ -46,3 +37,4 @@ refs.lightboxOverlayEl.addEventListener('click', closeModal); // 7.
     <script src="js/gallery-items.js"type="module"></script>
   </body>
 </html>
+
