--- a/01-gallery.html
+++ b/01-gallery.html
@@ -11,19 +11,7 @@
   <body>
     <p><a class="arrow" href="index.html">←</a></p>
 
-    <const refs = {
-  galleryListEl: document.querySelector('ul.gallery'),
-  modalContainerEl: document.querySelector('div.lightbox'),
-  lightboxOverlayEl: document.querySelector('div.lightbox__overlay'),
-  modalImgEl: document.querySelector('img.lightbox__image'),
-  modalCloseBtnEl: document.querySelector('[data-action="close-lightbox"]'),
-};
-
-const galleryMarkup = createGalleryMarkup(galleryItems);
-refs.galleryListEl.insertAdjacentHTML('beforeend', galleryMarkup);
-refs.galleryListEl.addEventListener('click', onGalleryItemClick);
-refs.modalCloseBtnEl.addEventListener('click', closeModal);
-refs.lightboxOverlayEl.addEventListener('click', closeModal); // 7.>
+    <!-- До цього списку додаються елементи галереї -->
     <ul class="gallery"></ul>
 
      <!--
@@ -49,4 +37,3 @@ refs.lightboxOverlayEl.addEventListener('click', closeModal); // 7.>
     <script src="js/gallery-items.js"type="module"></script>
   </body>
 </html>
-
